--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity
             android:name=".activities.ChapterActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Light" />
+            android:theme="@style/AppTheme.NoActionBar"
+            />
 
         <provider
             android:name=".providers.BibleProvider"
