--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.g.theholybible">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".activities.write_pop"
             android:theme="@style/CustomTheme"></activity>
         <activity
@@ -36,7 +42,7 @@
 
         <provider
             android:name=".providers.BibleProvider"
-            android:authorities="com.josephblough.bible.bibleprovider" />
+            android:authorities="com.g.theholybible.bibleprovider" />
 
     </application>
 
