--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.baoyz.swipemenulistview:library:1.3.0'
-    implementation 'com.ajts.androidmads.SQLite2Excel:library:1.0.4'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
