--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:icon="@drawable/bible_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <activity android:name=".activities.write_pop"
             android:theme="@style/CustomTheme"></activity>
@@ -42,6 +42,9 @@
         <provider
             android:name=".providers.BibleProvider"
             android:authorities="com.g.theholybible.bibleprovider" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
     </application>
 
